[package]
name = "humoreic"
version = "0.1.0"
authors = ["Eduardo Espadeiro <eduardo.espadeiro@tecnico.ulisboa.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "standard_framework"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
